# eff_cpp

./: CMakeLists.txt
include/: application.hpp  bowlcamera.hpp
src/: application.cpp  bowlcamera.cpp  main.cpp  test.cpp
